# choosy

./: .gitignore  Cargo.toml  README.md  default.nix  example-config.ron  flake.nix  rust-toolchain.toml  shell.nix
embed/: Cargo.toml  build.rs
embed/src/: lib.rs
frontend/: Cargo.toml
frontend/src/: backoff.rs  lib.rs  websocket.rs
frontend/static/: index.html
mpv_remote/: Cargo.toml
mpv_remote/examples/: demo-mpv.rs
mpv_remote/src/: lib.rs  messages.rs  pending.rs
mpv_remote/src/messages/: serde_duration.rs  serde_ipcresult.rs
nix/: rust-overlay.nix
protocol/: Cargo.toml
protocol/src/: lib.rs
server/: Cargo.toml
server/src/: config.rs  file_list.rs  file_scanner.rs  main.rs
server/src/database/: media.rs  mod.rs
sleigh/: Cargo.toml  README.md
sleigh/src/: encoding.rs  lib.rs
