[package]
name = "choosy_embed"
version = "0.1.0"
authors = ["Tommi Virtanen <tv@eagain.net>"]
edition = "2018"

[dependencies]
async-std = { version = "1.9.0", features = ["attributes", "unstable"] }

[build-dependencies]
anyhow = "1.0.40"
cargo_metadata = "0.13.1"
wasm-bindgen-cli = { version = "0.2.74", features = ["vendored-openssl"] }
