[package]
name = "choosy_frontend"
version = "0.1.0"
authors = ["Tommi Virtanen <tv@eagain.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.56"
choosy_protocol = { path = "../protocol" }
console_error_panic_hook = "0.1.7"
gloo = "0.6.1"
js-sys = "0.3.56"
serde = "1.0.136"
wasm-bindgen = "0.2.79"
yew = "0.19.3"
regex = "1.5.5"
weblog = "0.3.0"
serde_json = "1.0.79"
web-sys = "0.3.56"
