[package]
name = "choosy_frontend"
version = "0.1.0"
authors = ["Tommi Virtanen <tv@eagain.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.56"
choosy_protocol = { path = "../protocol" }
console_error_panic_hook = "0.1.7"
futures = "0.3.21"
gloo-net = "0.1.0"
js-sys = "0.3.56"
serde = "1.0.136"
serde_json = "1.0.79"
tracing = "0.1.32"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.79"
web-sys = { version = "0.3.56", features = ["Url", "UrlSearchParams"] }
yew = "0.19.3"
