[package]
name = "mpv_remote"
version = "0.1.0"
authors = ["Tommi Virtanen <tv@eagain.net>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
derive_builder = "0.11.1"
futures-channel = "0.3.21"
libc = "0.2.121"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["raw_value"] }
slab = "0.4.5"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["process", "io-util"] }
tracing = "0.1.32"

[dev-dependencies]
anyhow = "1.0.56"
tracing-subscriber = "0.3.9"
