[package]
name = "choosy"
version = "0.1.0"
authors = ["Tommi Virtanen <tv@eagain.net>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
async-std = { version = "1.9.0", features = ["attributes", "unstable"] }
choosy_embed = { path = "../embed" }
choosy_protocol = { path = "../protocol" }
mpv_remote = { path = "../mpv_remote" }
http-types = "2.11.1"
scopeguard = "1.1.0"
serde = { version = "1.0.126", features = ["derive"] }
tide = "0.16.0"
tide-websockets = "0.3.0"
walkdir = "2.3.2"
listenfd = "0.3.3"
kv-log-macro = "1.0.7"
log = { version = "0.4.14", features = ["kv_unstable", "kv_unstable_std"] }
serde_json = "1.0.64"
ron = "0.6.4"
thiserror = "1.0.24"
sled = "0.34.6"
sleigh = { path = "../sleigh" }
itertools = "0.10.1"
