[package]
name = "choosy"
version = "0.1.0"
authors = ["Tommi Virtanen <tv@eagain.net>"]
edition = "2018"

[dependencies]
anyhow = "1.0.56"
axum = "0.4.8"
choosy_embed = { path = "../embed" }
choosy_protocol = { path = "../protocol" }
futures = "0.3.21"
itertools = "0.10.3"
listenfd = "0.5.0"
mpv_remote = { path = "../mpv_remote" }
regex = "1.5.5"
ron = "0.7.0"
scopeguard = "1.1.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sled = "0.34.7"
sleigh = { path = "../sleigh" }
structopt = "0.3.26"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.2.5", features = ["trace"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = ["fmt", "env-filter"] }
walkdir = "2.3.2"
